Aggiunto pulsante bevande

--- a/La Mia Pizzeria/La Mia Pizzeria/Views/Shared/_MyHeader.cshtml
+++ b/La Mia Pizzeria/La Mia Pizzeria/Views/Shared/_MyHeader.cshtml
@@ -16,7 +16,8 @@
             <li class="nav-item btn btn-outline-light me-2"><a href="@Url.Action("Index", "Pizza")" class="nav-link px-2 fw-bold btn-light btn-outline-dark text-light " type="button">Home</a></li>
             <li class="nav-item btn btn-outline-light me-2"><a href="@Url.Action("Contacts", "Pizza")" class="nav-link px-2 fw-bold btn-light btn-outline-dark text-light" type="button">Contatti</a></li>
             <li class="nav-item btn btn-outline-light me-2"><a href="@Url.Action("Privacy", "Pizza")" class="nav-link px-2 fw-bold btn-light btn-outline-dark text-light" type="button">Privacy</a></li>
-            
+            <li class="nav-item btn btn-outline-light me-2"><a href="@Url.Action("Index", "Drinks")" class="nav-link px-2 fw-bold btn-light btn-outline-dark text-light" type="button">Bevande</a></li>
+
 
             
 
