--- a/La Mia Pizzeria/La Mia Pizzeria/Views/Drinks/Index.cshtml
+++ b/La Mia Pizzeria/La Mia Pizzeria/Views/Drinks/Index.cshtml
@@ -1,5 +1,11 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@
+
+<div class="container">
+
+    <div class="row">
+        <div class="col">
+
+        </div>
+    </div>
+
+</div>
