--- a/La Mia Pizzeria/La Mia Pizzeria/Views/Drinks/Index.cshtml
+++ b/La Mia Pizzeria/La Mia Pizzeria/Views/Drinks/Index.cshtml
@@ -1,11 +1,21 @@
-﻿@model List<DrinkModel>
+﻿
 
 <div class="container">
 
     <div class="row">
-        <div class="col">
+        
+        @{
+            <div class="col">
+                <div class="card">
+                    <img src="img" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                    </div>
+                </div>
+            </div>
+        }
 
-        </div>
+
     </div>
 
 </div>
