corrected a syntax error

--- a/La Mia Pizzeria/La Mia Pizzeria/Views/Drinks/Create.cshtml
+++ b/La Mia Pizzeria/La Mia Pizzeria/Views/Drinks/Create.cshtml
@@ -37,7 +37,7 @@
                 <div class="mb-3">
                     <label for="formGroupExampleInput2" class="form-label"> Liters </label>
                     <input asp-for="Liters" type="text" class="form-control" id="formGroupExampleInput2" placeholder="Another input placeholder">
-                    <span asp-validation-for="Price" class="text-danger"></span>
+                    <span asp-validation-for="Liters" class="text-danger"></span>
                 </div>
                 <button type="submit" class="btn btn-primary">Salva</button>
             </form>
